# lumi

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE.txt  lumi  lumi-dictator  lumi-telegram-inbound  lumi-telegram-outbound  lumi-viewer  lumi-voicer  pyproject.toml
core/: __init__.py  agent.py  biorhythm.py  cache_log.py  chunking.py  clock.py  closeness.md  closeness.py  config.py  cost_report.py  cycle.py  deidentify.py  embedder.py  emoji.md  emoji.py  emotion.py  files.py  imagegen.py  images.py  imagetool.py  inner_voice.md  inner_voice_moves.md  inner_voice_trace.md  intent.py  journal.py  llm.py  logtrim.py  memory.py  models.toml  mood.py  moves.py  natal.md  news.py  nudge.py  nudges.md  placeholders.py  prompt.py  repository.py  schedule.py  schedule.toml  (+12 more)
core/canon/: lili.md  lili_bak20260622.md
docs/: CANON_SPEC.md  DICTATION_SETUP.md  FILE_TOOL_SETUP.md  GEMINI_ENGINE.md  GPT55_SWITCH_AND_TOOL_LOOP.md  IMAGE_SETUP.md  JOURNAL_SETUP.md  LLM_OPERATIONS_COST.md  LLM_OPERATIONS_COST_UK.md  MEMORY.md  MEMORY_SESSION_LOGIC_UK.md  MODELS_SETUP.md  MODEL_PRICING.md  MODEL_ROUTING_IMPLEMENTATION.md  MOOD.md  MOVES_SETUP.md  NEWS_SETUP.md  PROMPT_OPTIMIZATION.md  PROMPT_OPTIMIZATION_II.md  PROMPT_OPTIMIZATION_III.md  PROMPT_OPTIMIZATION_RESULTS_UK.md  RECALL_TOOL_SETUP.md  SCHEDULER_SETUP.md  STYLES.md  TELEGRAM_SETUP.md  THOUGHT_DIRECTIVES.md  WEB_LOOKUP_SETUP.md  WIKI_SETUP.md  WIKI_TOOL.md
docs/Ai-agent-articles/: opovidannya_lin-mora_2026-06-20.md
scripts/: gemini_probe.py  migrate_store.py
specification/: ARCHITECTURE.md  MISSION.md  ROADMAP.md
specification/features/: BIORHYTHMS.md  CLOSENESS.md  CO_CREATION_CANVAS.md  CREATIVE_MCP.md  DICTATION_LOCAL.md  EMOTION.md  EMOTIONAL_MEMORY.md  EMOTION_VIEWER.md  FACE_THEMES.md  FILE_THOUGHTS.md  FILE_TOOL.md  GALLERY_MCP.md  IMAGE_TOOL.md  INNER_LIFE.md  INNER_MONOLOGUE.md  INNER_VOICE.md  JOURNAL.md  LATENCY.md  LONG-EMOTIONAL-MEMORY.md  MODEL_ROLES.md  NEEDS_full.md  NEWS_TOOL.md  SEMANTIC_RECALL.md  SEMANTIC_RECALL_CHUNKING.md  SEMANTIC_RECALL_CHUNKING.uk.md  SEMANTIC_RECALL_CONTEXT.md  SEMANTIC_RECALL_THEMATIC.md  SEMANTIC_RECALL_THEMATIC.uk.md  SOCIAL_BATTERY.md  TELEGRAM.md  THOUGHT_SCHEDULER.md  THOUGHT_STREAM.md  TOOL_THOUGHTS.md  VOICE_LOCAL.md  WEB_LOOKUP.md  WEB_SEARCH.md  WORLD_CONTEXT_MCP.md  _CHECKERS.md  _CURIOSITY.md  inner-life-concept-en.md  (+2 more)
state/: __init__.py  fifo.py  local_store.py  sqlite_store.py
telegram/: __init__.py  check.py  inbound.py  monitor.py  outbound.py
tests/: conftest.py
tests/contract/: test_emotion_contract.py  test_file_tool_contract.py  test_image_contract.py  test_imagegen_contract.py  test_isolation.py  test_journal_contract.py  test_llm_provider_contract.py  test_memory_records.py  test_news_contract.py  test_prompt_cache.py  test_semantic_recall_isolation.py  test_sendimage_contract.py  test_store_backends.py  test_thought_deid_contract.py  test_web_contract.py  test_wiki_contract.py
tests/integration/: test_ambient.py  test_closeness_store.py  test_compaction.py  test_date_tool.py  test_dictation.py  test_directive_sink.py  test_emotion_turn.py  test_fact_rag.py  test_fact_recall.py  test_facts.py  test_facts_core.py  test_facts_core_block.py  test_facts_obsolete.py  test_fast_turns.py  test_file_thoughts.py  (+36 more)
tui/: __init__.py  __main__.py  app.py  bridge.py  scheduler.py  sound.py
viewer/: __init__.py  __main__.py  app.py  face.py  placeholders.py  themes.py
voice/: __init__.py  dictator.py  sentences.py  stt.py  tts.py  voicer.py
(+269 files in other folders)
