[project]
name = "lumi"
version = "0.1.0"
description = "Lumi — a private text persona (Лілі): canon, layered memory, and a structured emotion channel."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.40",
    "textual>=0.80",
    "python-dotenv>=1.0",
    "pillow>=11",   # v0.7 viewer: placeholder face generation
    "pygame>=2.6",  # v0.7 viewer: the local face window
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
telegram = [
    "aiogram>=3",  # v0.13 Telegram bridge daemons (separate processes; not needed by core/tests)
]
voice = [
    "elevenlabs>=1",  # v0.14 local voicer (TTS); imported lazily, not needed by core/tests
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
