[project]
name = "lumi"
version = "0.1.0"
description = "Lumi — a private text persona (Лілі): canon, layered memory, and a structured emotion channel."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.40",
    "textual>=0.80",
    "python-dotenv>=1.0",
    "pillow>=11",   # v0.7 viewer: placeholder face generation
    "pygame>=2.6",  # v0.7 viewer: the local face window
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
telegram = [
    "aiogram>=3",  # v0.13 Telegram bridge daemons (separate processes; not needed by core/tests)
]
voice = [
    "elevenlabs>=1",  # v0.14 local voicer (TTS); imported lazily, not needed by core/tests
]
dictation = [
    "sounddevice>=0.4",  # v0.26 dictator mic capture (separate process; lazy; not needed by core/tests)
    # Deepgram (default) is called over the raw REST endpoint (stdlib urllib) — no SDK, no version churn.
    # Offline option: `pip install openai-whisper` (heavy, CPU/GPU); ElevenLabs Scribe reuses the `voice` extra.
]
embed = [
    "fastembed>=0.3",  # v0.16 local multilingual embedder (semantic recall); imported lazily
    "numpy>=1.26",     # v0.16 brute-force cosine in the local vector store
    "voyageai>=0.2",   # v0.16 optional CLOUD embedder (Anthropic-recommended); imported lazily
]
models = [
    "openai>=1",  # v0.18 OpenAI-compatible backend (OpenAI / DeepSeek / local server); imported lazily
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
